--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="weather.css">
+    <link rel="stylesheet" href="styles.css">
     </head>
 <body>
    <div class="card">
@@ -52,6 +52,6 @@
         </div>
     </div>
    </div>
-   <script src="Weather.js"></script> 
+   <script src="script.js"></script> 
 </body>
 </html>
